# ez-cmake

./: CMakeLists.txt  README.md  add_uninstall_target.cmake  compile_options.cmake  embed.cpp  ez-cmake-config.cmake  install_package.cmake  script-target.cmake  target_system_features.cmake  uninstall_script.cmake.in  utilities.cmake
cmake/: compile-options.cmake  install-package.cmake
embed/: embed.cpp  embedded_files.hpp.in
